--- a/Practice/Lesson 4/style.css
+++ b/Practice/Lesson 4/style.css
@@ -8,7 +8,6 @@ body{
 .navbar ul li a{
     text-decoration: none;
     font-size: 2vw;
-
 }
 .navbar ul li{
     display: inline-block;
@@ -16,15 +15,14 @@ body{
 .navbar{
     background-color: rgb(0, 0, 0);
     border-radius: 0.5vw;
-    border-top-style: none;
-}
+    padding-bottom: 1vw;
+    }
 a{
     color: #fff;
-    padding: 0.5vw;
+    margin: 1vw;
 }
 .tripple{
-    width:88vw;
-    padding: 0px 0px 0px 0.5vw;
+    width:88vw;    
 }
 .single{
     padding-right:0.5vw;
