--- a/Practice/my/styles.css
+++ b/Practice/my/styles.css
@@ -19,7 +19,7 @@ body{
 }
 .menue ul li{
     display: inline-block;
-    padding-right: 30px;
+    padding-right: 1vw;
 }
 /* .menue ul li:hover{
     display: block;
@@ -40,7 +40,8 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex: 0;
+    position: relative;
+    top: 500px;
 }
 .right ul li{
     display: inline-block;
