--- a/Practice/my/styles.css
+++ b/Practice/my/styles.css
@@ -9,8 +9,10 @@ body{
     font-weight: 600;
     padding-left: 2vw;
     font-size: 3.5vw;
-
-   
+}
+.logo a{
+    text-decoration: none;
+    color: white;
 }
 .m{
     color: white;
@@ -21,13 +23,11 @@ body{
     display: inline-block;
     padding-right: 1vw;
 }
-/* .menue ul li:hover{
-    display: block;
-} */
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: .5vw;
 }
 .left p a{
     color: white;
@@ -40,8 +40,6 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
-    top: 500px;
 }
 .right ul li{
     display: inline-block;
@@ -57,7 +55,93 @@ body{
 .first-left{
     margin-right: 20px;
 }
-
-
+.pra{
+    border: 2px solid white;
+}
+.assi{
+    border: 2px solid white;
+}
+.assignments{
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-left: 2vw;
+    justify-content: center;
+}
+.practice{
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-left: 2vw;
+    justify-content: center;
+}
+.p1{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+.p2{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+.p3{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+.p4{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+.a1{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.a2{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.a3{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.a4{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.a5{
+    width: 18vw;
+    height: 18vw;
+    margin-right: 20px;
+    margin-top: 20px;
+}
+.projects{
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-left: 2vw;
+    justify-content: center;
+}
 
 
