--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -48,7 +48,7 @@ body{
     .components li{
         text-align: center;
     }
-    .components:active{
+    .components.active{
         display: flex;
     }
 }
