--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -38,6 +38,7 @@ body{
         width: 100%;
     }
     .navbar{
+        display: flex;
         flex-direction: column;
         align-items: flex-start;
     }
