--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -13,46 +13,7 @@ body{
     margin-bottom: 0%;
     padding-bottom: 0%;
 }
-.toggle-button{
-    position: absolute;
-    top: .75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-}
-.toggle-button .bar{
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
-}
-@media(max-width: 768px){
-    .toggle-button{
-        display: flex;
-    }
-    .components{
-        display: none;
-        width: 100%;
-    }
-    .navbar{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-    .components ul{
-        flex-direction: column;
-        width: 100%;
-    }
-    .components li{
-        text-align: center;
-    }
-    .components.active{
-        display: flex;
-    }
-}
+
 a{
     text-decoration: none;
     font-size: 1.5vw;
@@ -66,6 +27,40 @@ a:hover{
     list-style-type: none;
     display: inline-block;
     padding-left: 3vw;
+}
+@media screen and (max-width: 768px){
+    .components ul{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .components li{
+        align-items: center;
+        margin: .5rem;
+        font-size: 2vw;
+
+    }
+    .toggle-button{
+        position: absolute;
+        top: .75rem;
+        right: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 30px;
+        height: 21px;
+    }
+    .toggle-button .bar{
+        height: 3px;
+        width: 100%;
+        background-color: white;
+        border-radius: 10px;
+    }
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
 }
 .bookbutton{
     margin-right: 2vw;
