--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -12,6 +12,10 @@ body{
     align-items: center;
     margin-bottom: 0%;
     padding-bottom: 0%;
+    position: fixed;
+    z-index: 9;
+    background-color: #3a1f14;
+    width: 100%;
 }
 
 a{
@@ -34,7 +38,7 @@ a:hover{
 @media (max-width: 768px){
     .logo span{
         position: absolute;
-        top: .85rem;
+        top: .45rem;
         left: 1rem;
         font-size: 1rem;
         z-index: 10;
@@ -79,7 +83,7 @@ a:hover{
     }
     .toggle-button{
         position: absolute;
-        top: .75rem;
+        top: .35rem;
         right: 1rem;
         display: flex;
         flex-direction: column;
@@ -97,7 +101,11 @@ a:hover{
     .navbar{
         flex-direction: column;
         align-items: flex-start;
-        height: 3rem;
+        height: 2rem;
+        position: fixed;
+        z-index: 9;
+        background-color: #3a1f14;
+        width: 100%;
     }
 }
 .bookbutton{
