--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -43,6 +43,9 @@ a:active{
 #check{
     display: none;
 }
+.components .currentButton{
+    background-color: rgb(102, 44, 2);
+}
 .iframe{
     display: flex;
     justify-content: center;
