--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -46,6 +46,51 @@ a:active{
 .components .currentButton{
     background-color: rgb(102, 44, 2);
 }
+.innercover{
+    display: flex;
+    justify-content: center;
+}
+.imagecover{
+    width: 30%;
+    height: 500px;
+}
+
+.formlayout{
+    background-color: #a55333;
+    padding: 2rem 2rem 2rem 2rem;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-radius: 10px;
+}
+
+#checkindate{
+    height: 2.5rem;
+    width: 20rem;
+}
+#checkoutdate{
+    height: 2.5rem;
+    width: 20rem;
+}
+#roomType{
+    height: 2.5rem;
+    width: 20rem;
+}
+#roomClass{
+    height: 2.5rem;
+    width: 20rem;
+}
+.formcover{
+    background-color:#3a1f14 ;
+    margin: 6rem 6rem 6rem 6rem;
+    padding: 3rem 3rem 3rem 3rem;
+    border-radius: 10px; 
+}
+.imgform{
+    width: 100%;
+    height: 500px;
+}
 .iframe{
     display: flex;
     justify-content: center;
@@ -86,6 +131,9 @@ iframe{
     text-decoration-thickness:  2px;;
 }
 @media (max-width: 768px){
+    .formcover{
+        background-color: white;
+    }
     iframe{
         height: 400px;
     }
@@ -356,7 +404,7 @@ iframe{
     justify-content: center;
     text-align: center;
 }
-#roomType{
+/* #roomType{
     width: 17.5rem;
     height: 2rem;
     color: rgb(133, 129, 129);
@@ -375,7 +423,7 @@ iframe{
     width: 17rem;
     height: 2rem;
     color:  rgb(133, 129, 129);
-}
+} */
 #c-a{
     width: 17.5rem;
     height: 2rem;
