--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -98,14 +98,14 @@ a:active{
 
 #checkindate{
     height: 2.5rem;
-    width: 20rem;
+    width: 19.7rem;
 }
 #checkoutdate{
-    height: 2.5rem;
-    width: 20rem;
+    height: 2.4rem;
+    width: 19.7rem;
 }
 #roomType{
-    height: 2.5rem;
+    height: 2.4rem;
     width: 20rem;
 }
 #roomClass{
@@ -120,7 +120,7 @@ a:active{
 }
 .imgform{
     width: 100%;
-    height: 517px;
+    height: 513.5px;
 }
 .iframe{
     display: flex;
@@ -163,7 +163,7 @@ iframe{
 }
 @media (max-width: 768px){
     .formlayout{
-        background-color:#993c18;
+        background-color:#a55333;
         border-radius: 10px;
     }
     .formcover{
