--- a/assignments/Assignment7/styles.css
+++ b/assignments/Assignment7/styles.css
@@ -161,6 +161,13 @@ iframe{
     text-decoration-color: #a55333;
     text-decoration-thickness:  2px;;
 }
+.logo a{
+    margin-left: 2vw;
+    font-size: 3vw;
+    color:#fff;
+    font-weight: 500;
+    text-decoration: none;
+}
 @media (max-width: 768px){
     .formlayout form p{
         font-size: 1.6rem;
@@ -175,12 +182,13 @@ iframe{
     iframe{
         height: 400px;
     }
-    .logo span{
+    .logo a{
         position: absolute;
         top: .65rem;
         left: 1rem;
         font-size: 1.3rem;
         z-index: 10;
+        text-decoration: none;
     }
     .components{
         flex-direction: column;
@@ -267,12 +275,7 @@ iframe{
     border-radius: 0.3vw;
     cursor: pointer;
 }
-.logo{
-    margin-left: 2vw;
-    font-size: 3vw;
-    color:#fff;
-    font-weight: 500;
-}
+
 .image{
     width: 78%;
     /* border: 2px solid #3a1f14; */
