--- a/Practice/quiz/styles.css
+++ b/Practice/quiz/styles.css
@@ -1,3 +1,12 @@
+#timer{
+    display: none;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(196, 184, 184);
+    padding: 10px 10px 10px 10px;
+}
 *{
     border-radius: 3px;
 }
