--- a/Practice/quiz/styles.css
+++ b/Practice/quiz/styles.css
@@ -6,6 +6,7 @@
     transform: translate(-50%, -50%);
     background-color: rgb(196, 184, 184);
     padding: 10px 10px 10px 10px;
+    width:50%;
 }
 *{
     border-radius: 3px;
@@ -27,6 +28,7 @@ body{
     transform: translate(-50%, -50%);
     background-color: rgb(196, 184, 184);
     padding: 10px 10px 10px 10px;
+    width:50%;
 }
 .show {
     position: relative;
