--- a/assignments/TeamReport/index.css
+++ b/assignments/TeamReport/index.css
@@ -36,11 +36,64 @@ form>input{
     font-weight: 550;
     border-radius: 5px;
 }
-#loginbut,#signinbut{
+#loginbut,#signinbut,#createNow{
     background-color: #16914B;
     color: #000;
     cursor: pointer;
     width: 20rem;
     font-weight: 550;
     border-radius: 5px;
+}
+#createTeam{
+    cursor: pointer;
+    background-color: #16914B;
+    height: 2.5rem;
+    width: 5rem;
+    outline: none;
+    font-size: 2rem;
+    border: none;
+    border-radius: 5px;
+    position: absolute;
+    left: 90%;
+    top: 90%;
+}
+.createTeamForm{
+    position: relative;
+     
+}
+.createTeamForm>form{
+    position: fixed;
+    left: 50%;
+    top: 35%;
+    transform: translate(-50%,0%);
+    margin: 0%;
+    padding: 0%;
+}
+.createTeamForm>form{
+    background-color: rgba(138, 115, 115, 0.658);
+    margin: 5px 5px 5px 7px;
+    padding:20px 20px 20px 20px ;
+    border-radius: 7px;
+}
+.createTeamForm>form>label{
+    background-color: rgba(0, 0, 0,0);
+    margin: 0%;
+    padding: 0%;
+}
+@media (max-width: 768px){
+    .createTeamForm>form{
+        position: fixed;
+        left: 50%;
+        top: 20%;
+        transform: translate(-50%,0%);
+        margin: 0%;
+        padding: 0%;
+    }
+    .createTeamForm>form{
+        padding:10px 10px 10px 10px ;
+        border-radius: 5px;
+
+    }
+    
+
 }
