--- a/assignments/TeamReport/index.css
+++ b/assignments/TeamReport/index.css
@@ -70,7 +70,7 @@ form>input{
     padding: 0%;
 }
 .createTeamForm>form{
-    background-color: rgba(138, 115, 115, 0.658);
+    background-color: #16914b4d;
     margin: 5px 5px 5px 7px;
     padding:20px 20px 20px 20px ;
     border-radius: 7px;
