--- a/assignments/TeamReport/index.css
+++ b/assignments/TeamReport/index.css
@@ -103,11 +103,23 @@ form>input{
     margin: 0%;
     padding: 0%;
 }
+.saveChanges{
+    background-color: #16914B;
+    width: 98.5%;
+    height: 2.5rem;
+    outline: none;
+    border: none;
+    margin: 5px 5px 5px 7px;
+    /* padding:20px 20px 20px 20px ; */
+    border-radius: 7px;
+    /* position: fixed; */
+    /* left: 100%; */
+}
 .teamOwnerView{
     width: 70%;
-    position: fixed;
+    position: absolute;
     left: 50%;
-    top: 15%;
+    top: 35%;
     transform: translate(-50%,0%);
     margin: 0%;
     padding: 0%;
@@ -178,5 +190,8 @@ form>input{
     .createTeamForm>form{
         padding:10px 10px 10px 10px ;
         border-radius: 5px;
+    }
+    .saveChanges{
+        width: 95%;
     }
 }
